--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 First steps with Wicket, using Scala.
-Deployed on Google App Engine : <a href="http://codecraft21.appspot.com/">http://codecraft21.appspot.com/</a>
+Deployed on Google App Engine : [[http://codecraft21.appspot.com/]]
