--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 First steps with Wicket, using Scala.
-Deployed on Google App Engine : [[http://codecraft21.appspot.com/]]
+Deployed on Google App Engine : http://codecraft21.appspot.com/
